<resources>
    <string name="app_name">Home and health</string>
    <string name="home">Home</string>
    <string name="health">Health</string>

    <!-- menu items-->
    <string name="blood_pressure">Blood pressure</string>
    <string name="accounting_devices">Accounting devices</string>
    <string name="comment">Commnent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu strings -->
    <string name="save">SAVE</string>
    <string name="add_press">Add result</string>
    <string name="delete_press">Delete</string>

    <string name="systolic">Systolic pressure</string>
    <string name="diastolic">Diastolic pressure</string>
    <string name="puls">Puls</string>

    <!-- Dialog buttons-->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

</resources>
